# scrum-poker

./: .gitignore  Cargo.toml  Dockerfile  build.rs  nixpacks.toml  package.json  spack.config.js  tsconfig.json
assets/: script.js
bindings/: Vote.ts  WSResponse.ts
go/: go.mod  go.sum  main.go  websocket.go
go/templates/: error.html  index.html  layout.html  session.html
public/assets/: session.js  session.js.map
rust/bindings/: Payload.ts  UserMessage.ts  WsError.ts
rust/src/: main.rs  views.rs
rust/src/app/: mod.rs  ws.rs
rust/templates/: error.html  session.ts
src/: main.rs  prelude.rs  views.rs
src/app/: mod.rs  session.rs  ws.rs
src/views/: mod.rs
templates/: 404.hbs  404.html  error.html  index.html  layout.hbs  layout.html  session.html  session.ts
templates/session/: _form.hbs  show.hbs
