[package]
name = "scrum-poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.2", features = ["ws", "macros", "tokio", "headers"] }
axum-extra = "0.7.4"
futures = "0.3.28"
handlebars = "4.3.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
