[package]
name = "scrum-poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.2", features = ["ws", "macros", "tokio", "headers"] }
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
minijinja = "0.32.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "6.2.1"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
